@@ -1,3 +1,5 @@
+  - allow single-digit days and months without smarty_make_timestamp()
+    in html_select_date (messju)
   - fix headers sent erroneously with cache_modified_check and fetch()
     (wphilips, messju)
   - fix config_file path bug (Marc Cabadas, Monte)
